--- a/mmp/pom.xml
+++ b/mmp/pom.xml
@@ -11,7 +11,9 @@
 	<url>http://maven.apache.org</url>
 
 	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	<maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
 	<dependencies>
@@ -59,10 +61,11 @@
 				<plugin>
 					<artifactId>maven-compiler-plugin</artifactId>
 					<version>3.8.1</version>
-					<configuration>
-					<release>1.8</release>										
-						<verbose>true</verbose>
-						<fork>true</fork>
+					<configuration>	
+					<source>1.8</source>
+                     <target>1.8</target>
+                     <verbose>true</verbose>
+						<fork>true</fork>						
 						<executable>${JAVA_HOME}\bin\javac</executable>
 						<compilerVersion>1.3</compilerVersion>
 					</configuration>
